--- a/src/main/webapp/panelUsuario.xhtml
+++ b/src/main/webapp/panelUsuario.xhtml
@@ -6,8 +6,8 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:rich="http://richfaces.org/rich"
       xmlns:a4j="http://richfaces.org/a4j"
-      xmlns:c="http://java.sun.com/jsp/jstl/core"
-   <h:head>
+      xmlns:c="http://java.sun.com/jsp/jstl/core">
+    <h:head>
 
         <ui:define name="titulo">
             <title>Panel del usuario #{usuario.email}</title>
@@ -19,8 +19,56 @@
                 <ui:include src="/resources/include/cabecera.xhtml"/>
             </ui:define>
             <ui:define name="content">
-                
-             </ui:define>
+                <div class="container-fluid">
+                    <div class="row">
+
+                        <div class="acor col-sm-offset-3 col-sm-6 col-xs-12">
+                            <h:form id="form">
+                                <rich:accordion switchType="client">
+                                    <rich:accordionItem name="datosPersonales">
+                                        <f:facet name="header">
+                                            Datos personales 
+                                        </f:facet>
+                                        <h:form>
+                                            <div class="text-center">
+                                            <h:outputLabel value="NIF: "/><br/>
+                                            <h:inputText required="true" requiredMessage="Por favor, introduzca su NIF"  value="#{clientes.nif}" size="60"/><br/>
+                                            <h:outputLabel value="Nombre: "/><br/>
+                                            <h:inputText required="true" requiredMessage="Por favor, introduzca su nombre" value="#{clientes.nombre}" size="60"/><br/>
+                                            <h:outputLabel  value="Primer apellido: "/><br/>
+                                            <h:inputText required="true" requiredMessage="Por favor, introduzca su primerApellido" value="#{clientes.ape1}" size="60"/><br/>
+                                            <h:outputLabel value="Segundo apellido: "/><br/>
+                                            <h:inputText value="#{clientes.ape2}"  size="60"/><br/>
+                                            <h:outputLabel value="Teléfono: "/><br/>
+                                            <h:inputText required="true" requiredMessage="Por favor, introduzca su teléfono" value="#{clientes.tlf}" size="60"/><br/>
+                                            <div class="pan-bot">
+                                            <a4j:commandButton  action="#{clientes.addDatos}" value="Enviar"/>
+                                            </div>
+                                            </div>
+                                        </h:form>
+                                    </rich:accordionItem>
+                                    <rich:accordionItem name="cambiarPass">
+                                        <f:facet name="header">
+                                            Cambiar contraseña
+                                        </f:facet>
+                                        <h:form>
+                                            <div class="text-center">
+                                                <h:messages id="mensajes" errorStyle="color:red; display:block"  rendered="true"/>
+                                                <h:outputLabel value="Introduce tu contraseña anterior"/><br/>
+                                                <h:inputSecret required="true" requiredMessage="Por favor, introduzca su vieja contraseña" value="#{usuarios.password}"/><br/>
+                                                <h:outputLabel value="Introduce tu contraseña nueva"/><br/>
+                                                <h:inputSecret required="true" requiredMessage="Por favor, introduzca su nueva contraseña" value="#{usuarios.otraPass}"/><br/>
+                                                <a4j:commandButton id="passbtn" value="enviar" action="#{usuarios.cambioPass}" render="mensajes" />
+                                              
+                                            </div>
+                                        </h:form>
+                                    </rich:accordionItem>
+                                </rich:accordion>
+                            </h:form>
+                        </div>
+                    </div>
+                </div>
+            </ui:define>
             <ui:define name="bottom">
                 <ui:include src="/resources/include/pie.xhtml"/>
             </ui:define>
