Cambios en el registro, login y panel de control del usuario

--- a/src/main/webapp/panelUsuario.xhtml
+++ b/src/main/webapp/panelUsuario.xhtml
@@ -29,23 +29,46 @@
                                         <f:facet name="header">
                                             Datos personales 
                                         </f:facet>
-                                        <h:form>
-                                            <div class="text-center">
-                                            <h:outputLabel value="NIF: "/><br/>
-                                            <h:inputText required="true" requiredMessage="Por favor, introduzca su NIF"  value="#{clientes.nif}" size="60"/><br/>
-                                            <h:outputLabel value="Nombre: "/><br/>
-                                            <h:inputText required="true" requiredMessage="Por favor, introduzca su nombre" value="#{clientes.nombre}" size="60"/><br/>
-                                            <h:outputLabel  value="Primer apellido: "/><br/>
-                                            <h:inputText required="true" requiredMessage="Por favor, introduzca su primerApellido" value="#{clientes.ape1}" size="60"/><br/>
-                                            <h:outputLabel value="Segundo apellido: "/><br/>
-                                            <h:inputText value="#{clientes.ape2}"  size="60"/><br/>
-                                            <h:outputLabel value="Teléfono: "/><br/>
-                                            <h:inputText required="true" requiredMessage="Por favor, introduzca su teléfono" value="#{clientes.tlf}" size="60"/><br/>
-                                            <div class="pan-bot">
-                                            <a4j:commandButton  action="#{clientes.addDatos}" value="Enviar"/>
-                                            </div>
-                                            </div>
-                                        </h:form>
+
+                                        <div class="text-center">
+                                            <c:choose>
+                                                <c:when test="#{cliente.nombre==null}">
+                                                    <h:form>
+                                                        <h:outputLabel value="NIF: "/><br/>
+                                                        <h:inputText required="true" requiredMessage="Por favor, introduzca su NIF"  value="#{clientes.nif}" size="60"/><br/>
+                                                        <h:outputLabel value="Nombre: "/><br/>
+                                                        <h:inputText required="true" requiredMessage="Por favor, introduzca su nombre" value="#{clientes.nombre}" size="60"/><br/>
+                                                        <h:outputLabel  value="Primer apellido: "/><br/>
+                                                        <h:inputText required="true" requiredMessage="Por favor, introduzca su primerApellido" value="#{clientes.ape1}" size="60"/><br/>
+                                                        <h:outputLabel value="Segundo apellido: "/><br/>
+                                                        <h:inputText value="#{clientes.ape2}"  size="60"/><br/>
+                                                        <h:outputLabel value="Teléfono: "/><br/>
+                                                        <h:inputText required="true" requiredMessage="Por favor, introduzca su teléfono" value="#{clientes.tlf}" size="60"/><br/>
+                                                        <div class="pan-bot">
+                                                            <a4j:commandButton  action="#{clientes.addDatos}" value="Enviar"/>
+                                                        </div>
+                                                    </h:form>
+                                                </c:when>
+                                                <c:otherwise>.
+                                                    <h:form>
+                                                        <h:outputLabel value="NIF: "/><br/>
+                                                        <h:inputText required="true" requiredMessage="Por favor, introduzca su NIF"  value="#{cliente.nif}" size="60"/><br/>
+                                                        <h:outputLabel value="Nombre: "/><br/>
+                                                        <h:inputText required="true" requiredMessage="Por favor, introduzca su nombre" value="#{cliente.nombre}" size="60"/><br/>
+                                                        <h:outputLabel  value="Primer apellido: "/><br/>
+                                                        <h:inputText required="true" requiredMessage="Por favor, introduzca su primerApellido" value="#{cliente.ape1}" size="60"/><br/>
+                                                        <h:outputLabel value="Segundo apellido: "/><br/>
+                                                        <h:inputText value="#{cliente.ape2}"  size="60"/><br/>
+                                                        <h:outputLabel value="Teléfono: "/><br/>
+                                                        <h:inputText required="true" requiredMessage="Por favor, introduzca su teléfono" value="#{cliente.tlf}" size="60"/><br/>
+                                                        <input type="hidden" name="datos" value="datos"/>
+                                                        <div class="pan-bot">
+                                                            <a4j:commandButton  action="#{clientes.addDatos}" value="Enviar"/>
+                                                        </div>
+                                                    </h:form>
+                                                </c:otherwise>
+                                            </c:choose>
+                                        </div>
                                     </rich:accordionItem>
                                     <rich:accordionItem name="cambiarPass">
                                         <f:facet name="header">
@@ -59,7 +82,6 @@
                                                 <h:outputLabel value="Introduce tu contraseña nueva"/><br/>
                                                 <h:inputSecret required="true" requiredMessage="Por favor, introduzca su nueva contraseña" value="#{usuarios.otraPass}"/><br/>
                                                 <a4j:commandButton id="passbtn" value="enviar" action="#{usuarios.cambioPass}" render="mensajes" />
-                                              
                                             </div>
                                         </h:form>
                                     </rich:accordionItem>
