--- a/src/main/webapp/registro.xhtml
+++ b/src/main/webapp/registro.xhtml
@@ -25,7 +25,7 @@
                         <div class="col-xs-12 col-sm-offset-4 col-sm-4">
                             <div class="registro">
                                 <rich:panel header="Registro">
-                                    <h:form>
+                                    <h:form id="formularioReg">
                                         <h:messages id="mensaje" class="danger"/>  
                                         <div class="inp-reg-email text-center">
                                         <h:outputLabel for="email" value="Email" /><br/>
