--- a/src/main/webapp/panelUsuario.xhtml
+++ b/src/main/webapp/panelUsuario.xhtml
@@ -63,27 +63,25 @@
                                             </div>
                                         </h:form>
                                     </rich:accordionItem>
-                                    <rich:accordionItem name="Preferencias">
+                                    <rich:accordionItem id="preferencias" name="Preferencias">
                                         <f:facet name="header">
                                             Preferencias
                                         </f:facet>
                                         <h:form>
-                                            <a4j:repeat value="#{panelControl.listaPref}" var="pref" rows="30" id="repeat">
-                                                <rich:panel styleClass="pan-pref">
-                                                    <f:facet name="header">
-                                                        <h:panelGroup>
-                                                            <div class="text-center">
-                                                            <h:outputText value="#{pref.nombre}" style="font-weight:bold;"/>
-                                                            </div>
-                                                        </h:panelGroup>
-                                                    </f:facet>
-                                                    <h:panelGrid columns="1">
-                                                        <h:selectBooleanCheckbox style="margin-left: 7rem" value="1" >
-                                                            <a4j:ajax event="change" execute="@this" listener="#{panelControl.insertPreferenciasUsuario(pref.id)}"/>
-                                                        </h:selectBooleanCheckbox>
-                                                    </h:panelGrid>
-                                                </rich:panel>
-                                            </a4j:repeat>
+                                            <a4j:repeat rendered="true" value="#{panelControl.listaPref}" var="pref" id="repeat" >
+                                                    <rich:panel id="pan" styleClass="pan-pref">
+                                                        <f:facet name="header">
+                                                            <h:panelGroup>
+                                                                <div class="text-center">
+                                                                    <h:outputText value="#{pref.nombre}" style="font-weight:bold;"/>
+                                                                </div>
+                                                            </h:panelGroup>
+                                                        </f:facet>
+                                                        <h:panelGrid id="prueba" columns="1">
+                                                            <a4j:commandButton style="margin-left: 7rem;" action="#{panelControl.insertPreferenciasUsuario(pref.id)}" image="#{pref.seleccionado ? '/resources/img/ico_checkbox_on.png' : '/resources/img/ico_checkbox_off.png'}" render="pan"/>
+                                                        </h:panelGrid>
+                                                    </rich:panel>
+                                            </a4j:repeat> 
                                         </h:form>
                                     </rich:accordionItem>
                                 </rich:accordion>
